--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,6 +105,12 @@ footer {
 	}
 }
 
+@media screen and (max-width: 750px) {
+	nav ul li {
+		width: 26px;
+	}
+}
+
 @media screen and (max-width: 500px) {
 	.title h1 {
 		font-size: 30px;
