--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ p {
 	line-height: 1.5em;
 	margin-left: 15px;
 	margin-right: 15px;
+	background-color: purple;
 }
 
 .review {
@@ -41,6 +42,7 @@ p {
 	position: absolute;
 	right: 0px;
 	font-size: 14px;
+	background-color: blue;
 }
 
 .toplink a {
@@ -57,6 +59,7 @@ p {
 	text-align: center;
 	margin-bottom: 40px;
 	margin-top: 20px;
+	background-color: red;
 }
 
 .title h1 {
@@ -69,6 +72,7 @@ nav {
 	margin: 0 auto;
 	text-align: center;
 	max-width: 800px;
+	background-color: orange;
 }
 
 nav ul li {
@@ -103,6 +107,10 @@ nav ul li:hover {
 	max-width: 800px;
 	opacity: .7;
 	transition: all .2s ease-in;
+}
+
+.gamelist h2 {
+	background-color: black;
 }
 
 .gamelist:hover {
@@ -147,6 +155,7 @@ nav ul li:hover {
 footer {
 	margin: 20px;
 	margin-top: 0;
+	background-color: green;
 }
 
 /* Resposive Design */
