--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 /* General */
 
 * {	
-	color: lightgrey;
+	/*color: #FDFF00;*/
+	color: #FF6400;
 	margin: 0;
 	padding: 0;
 }
@@ -11,7 +12,8 @@
 }
 
 body {
-	background: url("backgrounds/bg-pattern.jpg") fixed;
+	font-family: 'Almendra', serif;
+	background: url("backgrounds/subtle_carbon.png");
 }
 
 hr {
@@ -40,11 +42,7 @@ p {
 	-webkit-transform: scale(2);
 	z-index: 20;
 }
-/*
-.normal:hover {
-	transform: scale(1);
-}
-*/
+
 .even:after {
   content: "";
   display: table;
@@ -117,18 +115,22 @@ nav ul li:hover {
 	margin: 0 auto;
 	position: relative;
 	max-width: 800px;
-	opacity: .7;
-	transition: all .2s ease-in;
+	background-color: black;
+	/*opacity: .7;
+	transition: all .2s ease-in;*/
 }
 
 .gamelist h2 {
-	background-color: black;
+	background: url("backgrounds/binding_dark.png");
+	opacity: .7;
+	padding-bottom: 30px;
+	padding-top: 30px;
 }
-
+/*
 .gamelist:hover {
 	opacity: 1;
 }
-
+*/
 .gamelist p {
 	padding: 10px;
 	padding-bottom: 0;
@@ -169,6 +171,33 @@ nav ul li:hover {
 	text-align: center;
 }
 
+/* Each Sections' Background Image */
+
+.xv {
+	background: url("img/xv/xv-back.jpg") no-repeat 0 0;
+	background-size: 100% 100%;	
+}
+/*
+.xiv {
+	background: url("img/xiv/xiv-back.jpg") no-repeat 0 0;
+	background-size: 100% 100%;	
+}
+
+.xiii {
+	background: url("img/xiii/xiii-back.jpg") no-repeat 0 0;
+	background-size: 100% 100%;	
+}
+
+.xii {
+	background: url("img/xii/xii-back.jpeg") no-repeat 0 0;
+	background-size: 100% 100%;	
+}
+
+.xi {
+	background: url("img/xi/xi-back.jpg") no-repeat 0 0;
+	background-size: 100% 100%;	
+}
+*/
 /* Each Games' Images */
 
 .xv div .imgleft {
@@ -329,11 +358,104 @@ nav ul li:hover {
 	background-position: left;
 }
 
+/* Slider/Carousel */
+
+.carousel {
+	/*width: 600px;
+	height: 400px;
+	margin: 0 auto;*/
+
+}
+
+input, textarea { font-family: Arial; font-size: 125%; padding: 7px; }
+label { display: block; } 
+
+.infiniteCarousel {
+  width: 800px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.infiniteCarousel .wrapper {
+  width: 640px; /* .infiniteCarousel width - (.wrapper margin-left + .wrapper margin-right) */
+  overflow: auto;
+  min-height: 10em;
+  margin: 0 80px;
+  position: absolute;
+  top: 0;
+}
+
+.infiniteCarousel ul a img {
+  border: 5px solid #000;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
+.infiniteCarousel .wrapper ul {
+  width: 9999px;
+  list-style-image:none;
+  list-style-position:outside;
+  list-style-type:none;
+  margin:0;
+  padding:0;
+  position: absolute;
+  top: 0;
+}
+
+.infiniteCarousel ul li {
+  display:block;
+  float:left;
+  padding: 20px;
+  height: 135px;
+  width: 135px;
+}
+
+.infiniteCarousel ul li img {
+  display:block;
+}
+
+.infiniteCarousel .arrow {
+  display: block;
+  height: 36px;
+  width: 37px;
+  background: url("img/carousel/arrow.png") no-repeat 0 0;
+  text-indent: -999px;
+  position: absolute;
+  top: 37px;
+  cursor: pointer;
+}
+
+.infiniteCarousel .forward {
+  background-position: 0 0;
+  right: 0;
+}
+
+.infiniteCarousel .back {
+  background-position: 0 -72px;
+  left: 0;
+}
+
+.infiniteCarousel .forward:hover {
+  background-position: 0 -36px;
+}
+
+.infiniteCarousel .back:hover {
+  background-position: 0 -108px;
+}
+
 /* Footer */
 
 footer {
+	padding-bottom: 20px;
 	margin: 20px;
 	margin-top: 0;
+	position: relative;
+	bottom: -160px;
+}
+
+.footerhr {
+	position: relative;
+	top: 180px;
 }
 
 /* Resposive Design */
@@ -359,10 +481,6 @@ footer {
 		text-align: center;
 	}
 
-	.xv div .imgright {
-		background-position: -10px 0;
-	}
-
 	.even {
 		text-align: left;
 	}
@@ -376,6 +494,15 @@ footer {
 
 	.gamelist .imgleft {
 		left: 0;
+	}
+
+	.infiniteCarousel {
+		width: 400px;
+	}
+
+	.infiniteCarousel .wrapper {
+		width: 240px;
+		margin: 0 74px;
 	}
 }
 
@@ -400,20 +527,22 @@ footer {
 }
 
 @media screen and (max-width: 650px) {
-	.even div figure {
+	.even div figure#enlarge{
 		width: 140px;
+		background-position: center;
 	}
 
 	.even p {
 		width: 340px;
 	}
 
-	.gamelist div figure {
+	.gamelist div figure#enlarge {
 		width: 200px;
+		background-position: center;
 	}
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 590px) {
 	.even div figure {
 		width: 120px;
 	}
