--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ p {
 
 .toplink {
 	position: absolute;
-	right: 0px;
+	right: 10px;
 	font-size: 14px;
 }
 
@@ -105,8 +105,7 @@ nav ul li:last-child {
 }
 
 nav ul li:hover {
-	color: gray;
-	background-color: red;
+	background-color: brown;
 }
 
 /* Game List */
@@ -116,21 +115,14 @@ nav ul li:hover {
 	position: relative;
 	max-width: 800px;
 	background-color: black;
-	/*opacity: .7;
-	transition: all .2s ease-in;*/
 }
 
 .gamelist h2 {
 	background: url("backgrounds/binding_dark.png");
 	opacity: .7;
-	padding-bottom: 30px;
-	padding-top: 30px;
+	padding: 30px 10px;
 }
-/*
-.gamelist:hover {
-	opacity: 1;
-}
-*/
+
 .gamelist p {
 	padding: 10px;
 	padding-bottom: 0;
@@ -171,33 +163,6 @@ nav ul li:hover {
 	text-align: center;
 }
 
-/* Each Sections' Background Image */
-
-.xv {
-	background: url("img/xv/xv-back.jpg") no-repeat 0 0;
-	background-size: 100% 100%;	
-}
-/*
-.xiv {
-	background: url("img/xiv/xiv-back.jpg") no-repeat 0 0;
-	background-size: 100% 100%;	
-}
-
-.xiii {
-	background: url("img/xiii/xiii-back.jpg") no-repeat 0 0;
-	background-size: 100% 100%;	
-}
-
-.xii {
-	background: url("img/xii/xii-back.jpeg") no-repeat 0 0;
-	background-size: 100% 100%;	
-}
-
-.xi {
-	background: url("img/xi/xi-back.jpg") no-repeat 0 0;
-	background-size: 100% 100%;	
-}
-*/
 /* Each Games' Images */
 
 .xv div .imgleft {
@@ -419,7 +384,7 @@ label { display: block; }
   height: 36px;
   width: 37px;
   background: url("img/carousel/arrow.png") no-repeat 0 0;
-  text-indent: -999px;
+  text-indent: -999em;
   position: absolute;
   top: 37px;
   cursor: pointer;
